tests/invalid/invalid-022.inox
Module Invalid022

Sum(A Integer, B Integer) Integer :
    Return A + B
;

Main() :
    Sum(1)
;
